# verbalis-app

./: .gitignore  AGENTS.md  CLAUDE.md  FEAT.md  LICENSE  README.md  SPEC.md  biome.json  bts.jsonc  improv.md  package.json  plan.md  turbo.json
.claude/skills/good-code-skill/: SKILL.md  patterns.md
.claude/skills/pi-skill/: SKILL.md
.claude/skills/pi-skill/references/: agent-package.md  ai-package.md  auxiliary-packages.md  coding-agent.md  customization.md  extension-api.md  extension-guide.md  sdk-and-modes.md  tui-package.md
.claude/skills/shadcn-skill/: SKILL.md
.claude/skills/shadcn-skill/references/: components.md  installation.md  patterns.md  theming.md
.claude/skills/tanstack-skill/: SKILL.md
.claude/skills/tanstack-skill/references/: ai.md  config.md  db.md  devtools.md  form.md  pacer.md  prompt.md  query.md  ranger.md  router.md  start.md  store.md  table.md  virtual.md
.claude/skills/tauri-skill/: SKILL.md
.claude/skills/tauri-skill/references/: javascript-api.md  rust-api.md
.github/workflows/: ci.yml
apps/web/: index.html  package.json  vite.config.ts  vitest.config.ts  vitest.quick.config.ts
apps/web/src/: index.css  routeTree.gen.ts
apps/web/src-tauri/: Cargo.toml  Info.plist  ccc.md  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: commands.rs  lib.rs
apps/web/src/lib/: code-theme.ts  config-sync.test.ts  config-sync.ts  highlighter.ts  http.test.ts  http.ts  hue-presets.test.ts  hue-presets.ts  (+37 more)
scripts/: quick-test.ts
spec/: improv.md
(+165 files in other folders)
